add next player functionality

--- a/templates/server_wait_for_player_input.html
+++ b/templates/server_wait_for_player_input.html
@@ -3,6 +3,8 @@
 
     <p>Current player's turn:</p>
 
+    <h2 id="current_player"></h2>
+
     <h2 id="server_countdown_player_input"></h2>
 
     <ul id="server_waiting_for_player_input_list" hidden>
