--- a/templates/server.html
+++ b/templates/server.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    {% include 'server_start.html' %} {% include 'server_waiting_for_players.html' %} {% include 'server_wait_for_player_input.html' %} {% include 'server_prompt.html' %} {% include 'server_prompt_with_results.html' %} {% include 'server_scores.html' %}
+    {% include 'server_start.html' %} {% include 'server_waiting_for_players.html' %} {% include 'server_wait_for_player_input.html' %} {% include 'server_prompt.html' %} {% include 'server_prompt_with_results.html' %} {% include 'server_scores.html' %} {% include 'server_pre_turn.html' %}
 
 </body>
 
