--- a/static/styles/server_style.css
+++ b/static/styles/server_style.css
@@ -49,6 +49,11 @@ p {
     margin: -0.4em
 }
 
+#server_pre_turn_countdown {
+    font-size: 8em;
+    margin: -0.4em
+}
+
 #server_countdown_prompt {
     font-size: 1.3em;
 }
@@ -135,7 +140,34 @@ button {
     margin-bottom: -0.8em;
 }
 
+#player_red_team_button {
+    border: 1px outset red;
+    background-color: lightcoral;
+    height:50px;
+    width:50px;
+ }
 
+ #player_blue_team_button {
+    border: 1px outset blue;
+    background-color: lightblue;
+    height:50px;
+    width:50px;
+ }
+
+ #player_green_team_button {
+    border: 1px outset green;
+    background-color: lightgreen;
+    height:50px;
+    width:50px;
+ }
+
+ #player_yellow_team_button {
+    border: 1px outset yellow;
+    background-color: lightyellow;
+    height:50px;
+    width:50px;
+ }
+ 
 /* #server_start {
     background-color: lightblue;
 }
@@ -145,6 +177,10 @@ button {
 }
 
 #server_waiting_for_player_input {
+    background-color: lightpink;
+}
+
+#server_pre_turn {
     background-color: lightpink;
 }
 
