--- a/templates/server_pre_turn.html
+++ b/templates/server_pre_turn.html
@@ -1,11 +1,10 @@
 <div id="server_pre_turn">
 
-    <h1 class="server_current_player">dsadsa1</h1>
-
-    <h2 id="server_pre_turn_countdown">10</h2>
-
     <p>Get ready... your turn is starting soon!</p>
 
-    <button type="button" id="server_start_player_turn">Start your turn!</button>
+    <h2 id="server_pre_turn_countdown"></h2>
+
+    <h2></h2>
+    <button type="button" id="server_start_turn_button">Start your turn!</button>
 
 </div>
