add check for correct teams before start game

--- a/templates/server_waiting_for_players.html
+++ b/templates/server_waiting_for_players.html
@@ -13,6 +13,8 @@
         <li>Arash</li> -->
     </ul>
 
+    <h2 id="server_error_correct_number_of_players_on_teams"></h2>
+
     <button type="button" id="server_start_game">Start Game</button>
 
 </div>
