Fix issues with start turn button

--- a/templates/server_wait_for_player_input.html
+++ b/templates/server_wait_for_player_input.html
@@ -1,9 +1,6 @@
 <div id="server_waiting_for_player_input">
 
-
-    <p>Current player's turn:</p>
-
-    <h2 id="current_player"></h2>
+    <h2 id="current_player">Current player's turn:</h2>
 
     <h2 id="server_countdown_player_input"></h2>
 
