Add connected player, guess screen, and fix issues

--- a/templates/player.html
+++ b/templates/player.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    {% include 'player_name.html' %} {% include 'player_connect.html' %} {% include 'player_wait.html' %} {% include 'player_prompt_answer.html' %} {% include 'player_vote.html' %} {% include 'server_pre_turn.html' %} {% include 'player_choose_team.html' %}
+    {% include 'player_name.html' %} {% include 'player_connect.html' %} {% include 'player_wait.html' %} {% include 'player_prompt_answer.html' %} {% include 'player_vote.html' %} {% include 'server_pre_turn.html' %} {% include 'player_choose_team.html' %} {% include 'player_guess.html' %}
 </body>
 
 </html>
