--- a/templates/player_pre_turn.html
+++ b/templates/player_pre_turn.html
@@ -1,10 +1,10 @@
-<div id="server_pre_turn">
+<div id="player_pre_turn">
 
     <p>Get ready... your turn is starting soon!</p>
 
     <h2 id="server_pre_turn_countdown"></h2>
 
     <h2></h2>
-    <button type="button" id="server_start_turn_button" hidden>Start your turn!</button>
+    <button type="button" id="player_start_turn_button">Start your turn!</button>
 
 </div>
