--- a/templates/server_wait_for_player_input.html
+++ b/templates/server_wait_for_player_input.html
@@ -1,8 +1,25 @@
 <div id="server_waiting_for_player_input">
 
     <h2 id="current_player">Current player's turn:</h2>
+    <h2 id="current_player_name"></h2>
+
+    <p></p>
 
     <h2 id="server_countdown_player_input"></h2>
+
+    <p></p>
+    <p></p>
+
+    <ol id="server_scoreboard">
+        <li>Pascal</li>
+        <li>Georges</li>
+        <li>Toni</li>
+        <li>Tarkan</li>
+        <li>Michael</li>
+        <li>Ahmed</li>
+        <li>Mike</li>
+        <li>Arash</li>
+    </ol>
 
     <ul id="server_waiting_for_player_input_list" hidden>
         <li>Pascal</li>
